[gd_scene load_steps=6 format=3 uid="uid://8lb53vcktgoj"]

[ext_resource type="Script" path="res://monster/monster.gd" id="1_7ds24"]
[ext_resource type="Texture2D" uid="uid://dfcsib466kpk1" path="res://monster/gomez.png" id="1_8be8d"]
[ext_resource type="AudioStream" uid="uid://bhrj7r70745fc" path="res://monster/angrymetal.mp3" id="3_t7u0e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v3ayu"]
radius = 56.2228

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ce000"]
size = Vector2(106, 112)

[node name="Monster" type="CharacterBody2D" groups=["Monster"]]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_7ds24")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("1_8be8d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v3ayu")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ce000")

[node name="Game_Over" type="Timer" parent="."]
process_mode = 3
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t7u0e")
volume_db = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Game_Over" to="." method="_on_game_over_timeout"]
